# goit-pythonweb-hw-12

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 007a51125676_start_hw12.py  08084c2dfd49_added_admin.py  1b0909639e9c_add_role_column_to_users.py  31c8f93f79b9_added_admin_user.py  9886224ea41e_added_users.py  c22aa82307bf_initial_migration.py
docs/source/: conf.py  index.rst
docs/source/modules/: auth.rst  contacts.rst  users.rst
src/: settings.py
src/api/v1/: auth.py  contacts.py  router.py  users.py  utils.py
src/database/: db.py  models.py
src/repository/: contacts.py  token.py  users.py
src/schemas/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py  permissions.py
src/services/templates/: email_password_reset.html  email_verification.html
src/tests/: conftest.py  test_cloudinary.py  test_contacts_repository.py  test_permission.py  test_users_repository.py
