[project]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = "Fast Api project"
readme = "README.md"
requires-python = ">=3.12"

[dependencies]
fastapi = "*"
uvicorn = "*"
sqlalchemy = "*"
pydantic = "*"
psycopg2 = "*"
black = "*"
alembic = "*"
mako = "*"
asyncpg = "*"
python-jose = "*"
redis = "*"
passlib = "*"
fastapi-mail = "*"
bcrypt= "*"
cloudinary = "*"
libgravata = "*"
fastapi-limiter = "*"