[project]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
description = "Fast Api project"
readme = "README.md"
requires-python = ">=3.12"

[dependencies]
fastapi = "0.116.1"
uvicorn = "0.35.0"
sqlalchemy = "2.0.43"
pydantic = "2.11.7"
psycopg2 = "2.9.10"
alembic = "1.16.5"
mako = "1.3.10"
asyncpg = "0.30.0"
python-jose = "3.5.0"
redis = "6.4.0"
passlib = "1.7.4"
fastapi-mail = "1.5.0"
bcrypt = "3.2.0"
cloudinary = "1.44.1"
libgravatar = "1.0.4"
fastapi-limiter = "0.1.6"


[project.optional-dependencies]
dev = [
    "black == 25.1.0",
    "sphinx == 7.3.7",
    "sphinx-rtd-theme == 2.0.0",
    "pytest-asyncio == 0.23.6",
    "pytest-cov == 5.0.0",
    "pytest-mock == 3.14.0",
    "sphinx-markdown-builder == 0.5.5",
    "uv == 0.1.41",
    "aiosqlite == 0.21.0",
]
